--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "qs": "^6.9.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^4.0.2",
     "styled-components": "^5.2.1",
